<resources>
    <string name="app_name">Social Network</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer_close</string>
    <string name="login">Login</string>
    <string name="need_new_account">Dont have an Account , Need New Account ?</string>
    <string name="login_with">or Login with</string>
    <string name="someting_about_image">write Someting about image here</string>
    <string name="update_post">Update Post</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="user_name">User Name</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="post_description">post description .......</string>
    <string name="time">Time :</string>
    <string name="updated_a_post">has been updated a post</string>
    <string name="user_name_text">User name</string>
    <string name="user_name_header">User Name</string>
    <string name="editpost">EditPost</string>
    <string name="deletepost">DeletePost</string>
    <string name="profile_status">profile status</string>
    <string name="profile_username"> User Name</string>
    <string name="profile_name">Profile name</string>
    <string name="country1">country</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="relationship_status">relationship status</string>
    <string name="update_account">update Account Settings</string>
    <string name="search">search for people and Friend form School Collage</string>
    <string name="serach_here">Serach Here</string>
    <string name="full_name1">user full name</string>
    <string name="status">status</string>
    <string name="like">o Like</string>
    <string name="comments">Comments</string>
    <string name="write_comment">write a Comment here ....</string>
    <string name="date">Date</string>
    <string name="commented">Commented on</string>
    <string name="comments_text">Comments Text will display here</string>
    <string name="forget_password">Forget password</string>
    <string name="reset_your_password">We will mail you a link after When you Provide email and click The Send Button Please Click on that link to Reset your Password .</string>
    <string name="send_email">Send Email</string>
    <string name="write_email_here">write Email Here …</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="decline_friend_request">Decline Friend_Request</string>
    <string name="display_username">display username</string>
    <string name="receiver_massege">receiver massege</string>
    <string name="sender_massege">Sender massege</string>
</resources>
