<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorProfile"
    tools:context=".PersonProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/person_profile_pic"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:scaleType="centerCrop"
                app:civ_border_width="2dp"
                android:src="@drawable/profile"
                app:civ_border_color="#FF000000" />

            <TextView
                android:id="@+id/person_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_profile_pic"
                android:layout_marginTop="10dp"
                android:text="@string/profile_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/person_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_full_name"
                android:layout_marginTop="5dp"
                android:text="@string/user_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/person_profile_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_username"
                android:layout_marginTop="5dp"
                android:text="@string/profile_status"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/darker_gray"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/person_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_profile_status"
                android:layout_marginTop="40dp"
                android:text="@string/country"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/person_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_country"
                android:layout_marginTop="10dp"
                android:text="@string/date_of_birth"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/person_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_dob"
                android:layout_marginTop="5dp"
                android:text="@string/gender"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/person_relationship_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_gender"
                android:layout_marginTop="5dp"
                android:text="@string/relationship_status"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <Button
                android:id="@+id/person_send_friend_request_btn"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/person_relationship_status"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/send_friend_request"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/person_decline_friend_request"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/person_send_friend_request_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/decline_friend_request"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>