<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/register"
    tools:context=".SettingsActivity">

    <include android:id="@+id/settings_toolbar"
        layout="@layout/app_bar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@id/settings_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/settings_profile_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                app:civ_border_width="2dp"
                android:src="@drawable/profile"
                app:civ_border_color="#FF000000" />

            <EditText
                android:id="@+id/settings_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_profile_image"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/inputs"
                android:gravity="center"
                android:hint="@string/profile_status"
                android:inputType="textPersonName"
                android:padding="30dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/settings_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_status"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/inputs"
                android:hint="@string/profile_username"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/settings_profile_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_username"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/inputs"
                android:hint="@string/profile_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/settings_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_profile_full_name"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/inputs"
                android:hint="@string/country1"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/settings_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_country"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/inputs"
                android:hint="@string/date_of_birth"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/settings_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_dob"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/inputs"
                android:hint="@string/gender"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/settings_relationship_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_gender"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/inputs"
                android:hint="@string/relationship_status"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/update_account_setting_buttons"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/settings_relationship_status"
                android:layout_margin="20dp"
                android:background="@drawable/button"
                android:text="@string/update_account"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>